# rust-aws-arn

./: Cargo.toml  README.md
src/: error.rs  lib.rs  types.rs
src/builder/: cognito.rs  iam.rs  lambda.rs  mod.rs  s3.rs
src/types/: identifier.rs  partition.rs  region.rs  service.rs
tests/: test_account_identifier.rs  test_arn.rs  test_arn_builder.rs  test_examples.rs  utils.rs
tests/data/: examples-with-services.txt  examples.txt
