[package]
name = "aws-arn"
version = "0.3.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Provides types, builders, and other helpers to manipulate AWS Amazon Resource Name (ARN) strings"
documentation = "https://docs.rs/aws-arn/"
repository = "https://github.com/johnstonskj/rust-aws-arn.git"
license = "MIT"
readme = "README.md"
publish = true


[features]
default = ["serde"]
builders = ["lazy_static"]
serde = ["dep:serde"]

[dependencies]
bon = "3.3.2"

# Optional dependencies
lazy_static = { optional = true, version = "1.4.0" }
regex = "1.6"
serde = { optional = true, version = "1.0.110", features = ["derive"] }
serde_with = "3.12.0"
strum = { version = "0.27.0", features = ["derive", "phf", "strum_macros"] }
thiserror = "2.0.11"

[dev-dependencies]
proptest = "1.0.0"
pretty_assertions = "1.0.0"
doc-comment = "0.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
