[package]
name = "aws-arn"
version = "0.3.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Provides types, builders, and other helpers to manipulate AWS Amazon Resource Name (ARN) strings"
documentation = "https://docs.rs/aws-arn/"
repository = "https://github.com/johnstonskj/rust-aws-arn.git"
license = "MIT"
readme = "README.md"
publish = true


[features]
default = ["builders", "serde"]
builders = ["bon"]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
regex = "1.6"
strum = { version = "0.27.0", features = ["derive", "phf", "strum_macros"] }
thiserror = "2.0.11"

# Optional dependencies
bon = { optional = true, version = "3.3.2" }
serde = { optional = true, version = "1.0.110", features = ["derive"] }
serde_with = { optional = true, version = "3.12.0" }

[dev-dependencies]
proptest = "1.0.0"
pretty_assertions = "1.0.0"
doc-comment = "0.3"
rstest = "0.24.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
